// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds-media-query-max() > should return correct css for breakpoint: l 1`] = `
"@media (max-width: 1299px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-max() > should return correct css for breakpoint: m 1`] = `
"@media (max-width: 999px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-max() > should return correct css for breakpoint: s 1`] = `
"@media (max-width: 759px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-max() > should return correct css for breakpoint: xl 1`] = `
"@media (max-width: 1759px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-max() > should return correct css for breakpoint: xs 1`] = `
"@media (max-width: 479px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-max() > should return correct css for breakpoint: xxl 1`] = `
"@media (max-width: 1919px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: base 1`] = `
"@media (min-width: 0px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: l 1`] = `
"@media (min-width: 1300px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: m 1`] = `
"@media (min-width: 1000px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: s 1`] = `
"@media (min-width: 760px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: xl 1`] = `
"@media (min-width: 1760px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: xs 1`] = `
"@media (min-width: 480px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min() > should return correct css for breakpoint: xxl 1`] = `
"@media (min-width: 1920px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: base - xs 1`] = `
"@media (min-width: 0px) and (max-width: 479px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: l - xl 1`] = `
"@media (min-width: 1300px) and (max-width: 1759px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: m - l 1`] = `
"@media (min-width: 1000px) and (max-width: 1299px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: s - m 1`] = `
"@media (min-width: 760px) and (max-width: 999px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: xl - xxl 1`] = `
"@media (min-width: 1760px) and (max-width: 1919px) {
  div {
    color: deeppink;
  }
}"
`;

exports[`pds-media-query-min-max() > should return correct css for breakpoint range: xs - s 1`] = `
"@media (min-width: 480px) and (max-width: 759px) {
  div {
    color: deeppink;
  }
}"
`;
